# celeste_ocaml

./: .gitignore  README.md  aliasing.ml  block_flow.ml  builtin.ml  builtin_level_3.lua  builtin_level_4.lua  bypass_redundant_loads.ml  celeste-minimal.lua  celeste-room-2.lua  celeste-short.lua  celeste-standard-syntax.lua  celeste-typed.lua  celeste_ocaml.ml  celeste_ocaml.opam  celeste_ocaml.opam.locked  contract_blocks.ml  custom_fixpoint.ml  dune  dune-project  flow.ml  frontend.ml  frontend_example.ml  if-scopes.lua  if.lua  inspect-celeste.lua  inspect.ml  interpreter.ml  ir.ml  liveness.ml  lua_tests.ml  perf.ml  pico_number.ml  pico_number_interval.ml  plan.md  player-branches.txt  properties.lua  remove_dead_instructions.ml  rough_call_graph.dot  rough_call_graph.txt  (+2 more)
benchmarks/: collide.lua  for.lua  for_mini.lua  foreach.lua
lua-tests/: call-order.lua
lua_tests/: _pico8_specific_for_real_lua.lua  abstract_boolean.lua  abstract_boolean_no_call.lua  branching_into_return.lua  branching_with_allocations.lua  branching_with_irrelevant_locals.lua  call_order.lua  call_with_different_number_of_args.lua  call_with_less_args.lua  every_kind_of_if_else.lua  for_break.lua  for_range.lua  for_range_vector_both.lua  for_range_vector_low.lua  foreach.lua  hello_world.lua  if_scopes.lua  if_vector.lua  less_than.lua  liveness_issue_for_in_function.lua  normal_operators.lua  properties.lua  scopes.lua  short_circuit_operators.lua  short_circuit_operators_non_boolean.lua  string_length.lua  tables.lua  undefined_fields.lua  vector.lua  vector_branch.lua  vectorize_post.lua  vectorize_pre.lua
