(library
 (name compiler_lib)
 (modules
  aliasing
  block_flow
  builtin
  bypass_redundant_loads
  contract_blocks
  custom_fixpoint
  flow
  frontend
  interpreter
  ir
  liveness
  lua_tests
  perf
  pico_number
  remove_dead_instructions)
 (libraries bigarray lua_parser.lib batteries tqdm ocamlgraph ocaml-lua re)
 (inline_tests
  (deps
   (glob_files lua_tests/*.lua)
   builtin_level_3.lua))
 (preprocess
  (pps ppx_deriving.show ppx_deriving.eq ppx_deriving.ord ppx_inline_test)))

(executable
 (name frontend_example)
 (modules frontend_example)
 (libraries compiler_lib)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.eq ppx_deriving.ord)))
