(library
 (name compiler_lib)
 (modules
  block_flow
  builtin
  contract_blocks
  custom_fixpoint
  flow
  frontend
  inspect
  interpreter
  ir
  liveness
  lua_tests
  perf
  pico_number
  pico_number_interval)
 (libraries
  bigarray
  lua_parser.lib
  batteries
  tqdm
  ocamlgraph
  ocaml-lua
  re
  mtime
  mtime.clock.os
  camlimages.core)
 (inline_tests
  (deps
   (glob_files lua_tests/*.lua)
   builtin_level_3.lua))
 (preprocess
  (pps ppx_deriving.show ppx_deriving.eq ppx_deriving.ord ppx_inline_test)))

(executable
 (name frontend_example)
 (modules frontend_example)
 (libraries compiler_lib)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.eq ppx_deriving.ord)))
